# uuid_lic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  hello_openmp  main  main.cpp  program
.github/workflows/: RunShellScriptOnPullRequest.yml  cmake.yml  codeql.yml
